--- a/public/style.css
+++ b/public/style.css
@@ -641,10 +641,6 @@ video {
   margin-bottom: 3rem;
 }
 
-.mb-14 {
-  margin-bottom: 3.5rem;
-}
-
 .mb-16 {
   margin-bottom: 4rem;
 }
@@ -661,8 +657,12 @@ video {
   margin-bottom: 1rem;
 }
 
-.ml-14 {
-  margin-left: 3.5rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.ml-0 {
+  margin-left: 0px;
 }
 
 .ml-20 {
@@ -677,10 +677,6 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -689,12 +685,12 @@ video {
   margin-top: 1.75rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.ml-7 {
+  margin-left: 1.75rem;
 }
 
-.ml-0 {
-  margin-left: 0px;
+.ml-12 {
+  margin-left: 3rem;
 }
 
 .block {
@@ -741,12 +737,12 @@ video {
   height: 24rem;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-auto {
   height: auto;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-10 {
@@ -767,10 +763,6 @@ video {
 
 .w-6 {
   width: 1.5rem;
-}
-
-.w-72 {
-  width: 18rem;
 }
 
 .w-full {
@@ -1051,19 +1043,14 @@ video {
   padding-right: 1rem;
 }
 
-.px-48 {
-  padding-left: 12rem;
-  padding-right: 12rem;
-}
-
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
 
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-1 {
@@ -1101,9 +1088,9 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .pb-11 {
@@ -1458,6 +1445,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:ml-12 {
+    margin-left: 3rem;
+  }
+
   .sm\:w-1\/2 {
     width: 50%;
   }
@@ -1498,10 +1489,6 @@ video {
     position: static;
   }
 
-  .lg\:right-0 {
-    right: 0px;
-  }
-
   .lg\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -1525,16 +1512,24 @@ video {
     margin-left: 0px;
   }
 
+  .lg\:ml-14 {
+    margin-left: 3.5rem;
+  }
+
   .lg\:mr-7 {
     margin-right: 1.75rem;
   }
 
-  .lg\:mt-9 {
-    margin-top: 2.25rem;
+  .lg\:mt-20 {
+    margin-top: 5rem;
   }
 
-  .lg\:ml-14 {
-    margin-left: 3.5rem;
+  .lg\:ml-28 {
+    margin-left: 7rem;
+  }
+
+  .lg\:ml-5 {
+    margin-left: 1.25rem;
   }
 
   .lg\:block {
@@ -1573,12 +1568,12 @@ video {
     width: 25%;
   }
 
-  .lg\:w-full {
-    width: 100%;
-  }
-
   .lg\:w-72 {
     width: 18rem;
+  }
+
+  .lg\:w-full {
+    width: 100%;
   }
 
   .lg\:max-w-full {
@@ -1611,12 +1606,21 @@ video {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:self-end {
+    align-self: flex-end;
+  }
+
   .lg\:rounded-none {
     border-radius: 0px;
   }
 
   .lg\:bg-transparent {
     background-color: transparent;
+  }
+
+  .lg\:px-48 {
+    padding-left: 12rem;
+    padding-right: 12rem;
   }
 
   .lg\:pb-96 {
